--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 incorpora cámara frontal HD junto a micrófono dual, asimismo incluye altavoces estéreo integrados que brindan sonido claro y asi mismo cuenta con puerto jack de audifonos y viene preinstalada con sistema operativo Windows 11Pro 
                 instalado y listo para usar asi como cuenta con una batería de polímero de litio que tiene capacidad de 5000 mAh, lo cual le brinda autonomía suficiente para que dure varias horas sin necesidad de estar conectada a la corriente eléctrica.</p>
             <p>Precio: $ 5,935 <del> $ 9,481 </del></p>
-            <a href="Final Boss 2.html">Comprar ahora</a>
+            <a href="index(2).html">Comprar ahora</a>
         </div>
     </section>
 
@@ -52,7 +52,7 @@
 
             </p>
             <p>Precio: $$18,526.00 <del>$22,591.99</del></p>
-                <a href="Final Boss 2.html">Comprar ahora</a>
+                <a href="index(2).html">Comprar ahora</a>
             </div>
             <div class="computadora">
                 <img src="https://m.media-amazon.com/images/I/417aaHZ-wfL._AC_SX522_.jpg" width="300">
@@ -63,7 +63,7 @@
                la pantalla tiene una luminancia de 200nits y un tiempo de respuesta de 25ms de alza y caída 
                también cuenta con un puerto HDMI 1.4, un conector universal, un lector de tarjetas multimedia SD 4.0, un puerto USB 3.1 de 1.ª generación con PowerShare y un puerto de red RJ45.</p>
             <p>Precio: $3,049  <del> $4,950 </del></p>
-                <a href="Final Boss 2.html">Comprar ahora</a>
+                <a href="index(2).html">Comprar ahora</a>
             </div>
         </div>
     </section>
@@ -110,3 +110,4 @@
 
 </body>
 </html>
+
