--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
     <header>
         <h1>Computadoras a la Venta</h1>
-        <img src="https://cdn-gx-aria-media.osp.opera.software/images/95f0e8ec-7c56-11ef-8076-5f46d37eac0e/1727389697659/sample_0.jpg" width="300">
         <nav>
             <ul>
                 <li><a href="#computadoras">Computadoras</a></li>
@@ -55,6 +54,7 @@
                 <a href="index (2).html">Comprar ahora</a>
             </div>
             <div class="computadora">
+                <img src="https://m.media-amazon.com/images/I/417aaHZ-wfL._AC_SX522_.jpg" width="300">
             <img src="https://m.media-amazon.com/images/I/61r-ExViytL._AC_SX522_.jpg" width="300">
             <h3>Dell Latitude 7490 | Core i5 |  8GB RAM | 256GB SSD | Windows 11 Pro |</h3>
             <p>La Dell Latitude 7490 es una laptop de negocios de 14 pulgadas con una pantalla HD de 1366 x 768 pixeles
