--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Computadoras a la Venta</title>
+    <title>TECNO SHOP</title>
     <link rel="stylesheet" href="Final Boss.css">
 </head>
 <body>
     <header>
-        <h1>Computadoras a la Venta</h1>
+        <h1>TECNO SHOP/h1>
         <nav>
             <ul>
                 <li><a href="#computadoras">Computadoras</a></li>
