--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>TECNO SHOP/h1>
+        <h1>TECNO SHOP</h1>
         <nav>
             <ul>
                 <li><a href="#computadoras">Computadoras</a></li>
