--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>TECNO SHOP</title>
     <link rel="stylesheet" href="Final Boss.css">
 </head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4824517174016693"
+     crossorigin="anonymous"></script>
 <body>
     <header>
         <h1>TECNO SHOP</h1>
